teleport_targets/database/aws-rds-postgres/rds.tf
resource "aws_db_instance" "teleport-rds" {
  for_each                            = var.dbs
  identifier                          = each.value.dbname
  instance_class                      = "db.t3.medium"
  allocated_storage                   = 5
  engine                              = "postgres"
  engine_version                      = "14.9"
  username                            = var.db_admin
  password                            = var.db_password
  db_subnet_group_name                = aws_db_subnet_group.teleport-rds.name
  vpc_security_group_ids              = [aws_security_group.rds.id]
  publicly_accessible                 = true
  skip_final_snapshot                 = true
  backup_retention_period             = 0
  deletion_protection                 = false
  iam_database_authentication_enabled = true
  tags = {
    env = each.value.environment
    "teleport.dev/db-admin" = "teleport-postgres"
  }

}
